[tool.poetry]
name = "implore"
version = "0.3.0"
description = "An even more desperate way to make requests for Humans."
authors = ["skeptycal <skeptycal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
apscheduler = "^3.6.3"
Django = "^3.0.3"
ujson = "*"
bs4 = "*"
lxml = "*"
html5lib = "*"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
tox = "*"
twine = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
